<resources>
    <string name="app_name">PCOMoviesApp</string>
    <string name="register_title">Register</string>
    <string name="btn_register">Register</string>
    <string name="btn_cancel">Cancel</string>
    <string name="login_title">Welcome!</string>
    <string name="session_name">Username</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="alert_success_button">Go to login</string>
    <string name="alert_fail_button">Try again</string>
    <string name="register_alert_success_title">Successful register</string>
    <string name="register_alert_fail_title">Failed register</string>
    <string name="register_alert_success_message">Registration process was successful</string>
    <string name="register_alert_fail_message">There was a problem while saving your data. Try again or change your username.</string>
    <string name="login_alert_failed_title">Wrong credentials</string>
    <string name="login_alert_failed_user">The user was not found. Check it and try again.</string>
    <string name="login_alert_failed_password">The password is wrong. Check it and try again.</string>
    <string name="active_user">active_user</string>
    <string name="shared_session">shared_session</string>
    <string name="poster_preview_content_description">Poster preview</string>
    <string name="popular">Popular</string>
    <string name="popular_original_title">Original title: %s</string>
    <string name="popular_popularity">Popularity: %s</string>
    <string name="popular_release_date">Release date: %s</string>
    <string name="favorites">Favorites</string>
    <string name="popular_empty_message">No movies received</string>
    <string name="favorites_empty_message">There are no favorite movies</string>
    <string name="understood">Understood</string>
    <string name="home_welcome_user">Welcome</string>
    <string name="movie_img_content_description">Movie poster</string>
    <string name="dummy_movie_title">The Dummy movie</string>
    <string name="dummy_movie_overview">This is a dummy overview about the dummy movie</string>
    <string name="original_language">Original language: %1$s</string>
    <string name="original_title">Original title: %1$s</string>
    <string name="popularity">Popularity: %1$f</string>
    <string name="release_date">Release date: %1$s</string>
    <string name="vote_average">Vote average: %1$f</string>
    <string name="no_remote_message">It was not possible to load the moves from the remote source</string>
    <string name="btn_load_local">Load local data</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>