<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.RegisterFragment">

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_margin"
        android:text="@string/register_title"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        android:textColor="@color/title"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterName"
        android:layout_width="@dimen/adjust_constraint_size"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle"
        app:layout_constraintStart_toStartOf="@id/tvRegisterTitle"
        app:layout_constraintEnd_toEndOf="@id/tvRegisterTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterSessionName"
        android:layout_width="@dimen/adjust_constraint_size"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@id/tilRegisterName"
        app:layout_constraintStart_toStartOf="@id/tvRegisterTitle"
        app:layout_constraintEnd_toEndOf="@id/tvRegisterTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterSessionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/session_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilRegisterPassword"
        android:layout_width="@dimen/adjust_constraint_size"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintTop_toBottomOf="@id/tilRegisterSessionName"
        app:layout_constraintStart_toStartOf="@id/tvRegisterTitle"
        app:layout_constraintEnd_toEndOf="@id/tvRegisterTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/purple_700"
        android:text="@string/btn_register"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tilRegisterPassword"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/white"
        android:text="@string/btn_cancel"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tilRegisterPassword"
        app:layout_constraintEnd_toStartOf="@id/btnRegister"/>

</androidx.constraintlayout.widget.ConstraintLayout>