<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.LoginFragment">

    <TextView
        android:id="@+id/tvLoginTitle"
        android:layout_width="@dimen/adjust_constraint_size"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/title_margin"
        android:text="@string/login_title"
        android:textColor="@color/title"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginSessionName"
        android:layout_width="@dimen/adjust_constraint_size"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="@id/tvLoginTitle"
        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginSessionName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/session_name"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLoginPassword"
        android:layout_width="@dimen/adjust_constraint_size"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/input_margin"
        app:layout_constraintEnd_toEndOf="@id/tvLoginTitle"
        app:layout_constraintStart_toStartOf="@id/tvLoginTitle"
        app:layout_constraintTop_toBottomOf="@id/tilLoginSessionName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etLoginPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilLoginPassword"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/sign_in"
        app:layout_constraintEnd_toStartOf="@id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/tilLoginPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>